src/styles/Projects.css
#project-bg-left, #project-bg-right {
    position: fixed;
    width: 0;
    height: 0;
    z-index: -2;
}

#project-bg-left {
    top: -20vh;
    left: -20vw;
    border-top: 145vh solid rgb(50,67,76);
    border-right: 78vw solid transparent;
    -webkit-animation: 1.5s ease-out 1 slideRight;
    animation: 1.5s ease-out 1 slideRight;
}

#project-bg-right {
    bottom: -20vh;
    right: -10vw;
    border-bottom: 145vh solid rgb(50,67,76);
    border-left: 78vw solid transparent;
    -webkit-animation: 1.5s ease-out 1 slideLeft;
    animation: 1.5s ease-out 1 slideLeft;
}

.project-main {
    display: flex;
    margin-bottom: 5rem;
    --width: 13rem;
    --margin: 6px;
    --rows: calc(1.732 * var(--width) + 4 * var(--margin) - 1px);
}

.project-box {
    font-size: 0;
}

.project-box::before {
    content: "";
    width: calc(var(--width)/2 + var(--margin));
    /* float: left; */
    height: 120%;
    /* shape-outside: repeating-linear-gradient(
        rgba(0,0,0,0) 0 calc(var(--rows) - 3px), 
        rgb(0,0,0) 0 var(--rows)
    );
    -webkit-shape-outside: -webkit-repeating-linear-gradient(
        rgba(0,0,0,0) 0 calc(var(--rows) - 3px), 
        rgb(0,0,0) 0 var(--rows)
    );
    -moz-shape-outside: -moz-repeating-linear-gradient(
        rgba(0,0,0,0) 0 calc(var(--rows) - 3px), 
        rgb(0,0,0) 0 var(--rows)
    ); */
}

.project-hex {
    position: relative;
    width: var(--width);
    height: calc(var(--width) * 1.1547);
    margin: var(--margin);
    display: inline-block;
    font-size: initial;
    /* margin-bottom: calc(var(--margin) - var(--width) * 0.2885); */
}

.project-hex:hover .project-desc {
    opacity: .9;
    transform: scale(1.2);
    transition-duration: 0.3s;
}

.project-hex:hover .project-pic {
    opacity: 0;
    transition-duration: 0.3s;
}

.project-hex::before {
    content: "";
    position: absolute;
    background: rgb(99,40,52);
    inset: 0 0 0 0;
    clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
}

.project-hex .project-desc {
    background: rgb(99,40,52);
}

.project-hex:nth-child(2)::before, .project-hex:nth-child(2) .project-desc {
    background: rgb(61,75,130);
}

.project-hex:nth-child(3)::before, .project-hex:nth-child(3) .project-desc {
    background: rgb(117,77,180);
}

.project-hex:nth-child(4)::before, .project-hex:nth-child(4) .project-desc {
    background: rgb(193,98,204);
}

.project-hex:nth-child(5)::before, .project-hex:nth-child(5) .project-desc {
    background: rgb(108,37,152);
}

.project-hex-outer {
    width: calc(var(--width) * 1.033);
    height: calc(var(--width) * 0.603);
    top: calc(var(--width) * 0.271);
    left: calc(var(--margin) * -0.67);
    background: gold;
    position: absolute;
    z-index: -1;
}

.project-hex-outer::before, .project-hex-outer::after {
    content: "";
    position: absolute;
    width: calc(var(--width) * 1.033);
    height: calc(var(--width) * 0.3);
    background-color: gold;
    clip-path: polygon(50% 0, 100% 100%, 0 100%);
}

.project-hex-outer::before {
    top: calc(var(--width) * -0.3);
}

.project-hex-outer::after {
    bottom: calc(var(--width) * -0.3);
    transform: rotate(180deg);
}

.project-pic {
    width: 120%;
    transition-duration: 0.3s;
    position: absolute;
    left: -10%;
    top: 16%;
}

.project-desc {
    position: absolute;
    top: 5px;
    opacity: 0;
    padding: 20px;
    font-size: 10px;
    z-index: 1;
    transition-duration: 0.3s;
    clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
}

.project-desc h3 {
    color: gold;
    font-size: 14px;
}

.project-about {
    text-align: center;
    color: rgb(220,220,220);
    margin: 0 10%;
    font-weight: bold;
}

.project-skills {
    text-align: center;
    color: rgb(220,220,220);
    margin: 10% 10%;
    font-weight: bold;
}

.project-links {
    margin: 10% 10%;
    color: goldenrod;
    text-align: center;
    font-weight: bold;
    text-transform: uppercase;
}

.project-links a {
    color: goldenrod;
    text-decoration: none;
    transition-duration: 0.2s;
}

.project-links a:hover {
    border-bottom: 2px solid goldenrod;
    transition-duration: 0.2s;
}

